add coordinates to display NAD properly
Signed-off-by: maissa SOUISSI <maissa.souissi@rte-france.com>